Added CRUD for Enrollments

--- a/Pages/Students/Details.cshtml
+++ b/Pages/Students/Details.cshtml
@@ -35,7 +35,7 @@
         <dd class="col-sm-10">
             <table class="table">
                 <tr>
-                    <th>Course Tite</th>
+                    <th>Course Title</th>
                     <th>Grade</th>
                     <th>Teacher(s)</th>
                 </tr>
