--- a/Pages/Courses/Details.cshtml
+++ b/Pages/Courses/Details.cshtml
@@ -23,6 +23,29 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Course.Credits)
         </dd>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>Enrolled Student</th>
+                    <th>Grade</th>
+                    <th></th>
+                </tr>
+                @foreach (var item in Model.Course.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Student.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Grade)
+                        </td>
+                        <td>
+                            <a asp-page="../Enrollments/Delete" asp-route-id="@item.Student.ID">Remove</a>
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <div>
