--- a/Pages/Students/Details.cshtml
+++ b/Pages/Students/Details.cshtml
@@ -61,6 +61,9 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Student.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Student.ID">Edit</a>
+    @if(!User.IsInRole(StaticDetail.StudentUser))
+    {
+        <a asp-page="./Index">| Back to List</a>
+    }
 </div>
