--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,7 +19,7 @@
             <div class="form-floating">
                 <input asp-for="Input.SchoolID" class="form-control" aria-required="true" />
                 <label asp-for="Input.SchoolID"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <span asp-validation-for="Input.SchoolID" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
