Updated DbInit to include default users and roles

--- a/Pages/Students/Details.cshtml
+++ b/Pages/Students/Details.cshtml
@@ -51,7 +51,8 @@
                         <td>
                             @foreach (var t in item.Course.TeacherCourses)
                             {
-                                @Html.DisplayFor(modelItem => t.Teacher.FullName);
+                                @Html.DisplayFor(modelItem => t.Teacher.FullName)
+                                <br>
                             }
                         </td>
                     </tr>
