--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,24 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container-fluid">
+    <h1 class="display-4">Welcome to <b>SchoolWebApp</b></h1>
+    <p>A place to learn, adapt and overcome.</p>
+    <div class="row content">
+        <div class="col-sm-10">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpixnio.com%2Ffree-images%2Fpeople%2Fchildren-kids%2Fthese-children-at-a-school-in-turkestan-city-are-participating-in-a-national-reading-day.jpg&f=1&nofb=1" class="img-fluid" style="width:50% height:auto"></img>
+        </div>
+        <div class="col-sm-2 sidenav text-left">
+            <div>
+                <h1>Motto</h1>
+                <p>We always strive for an all-inclusive learning experience and frequently help develop new methods to improve our students results.</p>
+            </div>
+            <div>
+                <h1>Contact</h1>
+                <p>schoolwebapp@("@localhost")</p>
+                <p>Street number 1 ABC</p>
+                <p>+46 123456789</p>
+            </div>
+        </div>
+    </div>
 </div>
