Added buttons for adding teachers and students

--- a/Pages/Courses/Details.cshtml
+++ b/Pages/Courses/Details.cshtml
@@ -41,6 +41,9 @@
                     </tr>
                 }
             </table>
+            <p>
+                <a asp-page="../TeachersCourses/Create">Add teacher</a>
+            </p>
             <table class="table">
                 <tr>
                     <th>Enrolled Student(s)</th>
@@ -62,6 +65,9 @@
                     </tr>
                 }
             </table>
+            <p>
+                <a asp-page="../Enrollments/Create">Add student</a>
+            </p>
         </dd>
     </dl>
 </div>
