--- a/Pages/TeachersCourses/Create.cshtml
+++ b/Pages/TeachersCourses/Create.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a href="javascript:history.go(-1);">Back to List</a>
 </div>
 
 @section Scripts {
